--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 */*/.git
 */*/465.txt
 */*/*.log
+*/*/roundingsat*
 */*/makefile
+*/*/Makefile
 */*/roundingsat
 */*/CMakeCache.txt
 */*/cmake_install.cmake
